--- a/PramSimulator_WebApp/PramSimulator_WebApp/Components/Layout/NavMenu.razor
+++ b/PramSimulator_WebApp/PramSimulator_WebApp/Components/Layout/NavMenu.razor
@@ -8,13 +8,13 @@
 <div @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-4">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="">
+            <span class="oi oi-list-rich" aria-hidden="true"></span> PRAM
             </NavLink>
         </li>
         <li class="nav-item px-4">
-            <NavLink class="nav-link" href="home">
-            <span class="oi oi-list-rich" aria-hidden="true"></span> PRAM
+            <NavLink class="nav-link" href="settings">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Settings
             </NavLink>
         </li>
     </ul>
